logs/pixelweb.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PixelWeb-1.1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pixelweb'...
Compiling './lib/python3.5/site-packages/pixelweb/actions.py'...
***   File "./lib/python3.5/site-packages/pixelweb/actions.py", line 42
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pixelweb/bootstrap.py'...
***   File "./lib/python3.5/site-packages/pixelweb/bootstrap.py", line 35
    print "Installing " + mod
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pixelweb/bpmanager.py'...
***   File "./lib/python3.5/site-packages/pixelweb/bpmanager.py", line 214
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pixelweb/config.py'...
***   File "./lib/python3.5/site-packages/pixelweb/config.py", line 72
    print "Creating {}".format(__home)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pixelweb/loader.py'...
***   File "./lib/python3.5/site-packages/pixelweb/loader.py", line 23
    except ImportError, x:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pixelweb/pixelweb.py'...
***   File "./lib/python3.5/site-packages/pixelweb/pixelweb.py", line 82
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pixelweb/ui'...
Listing './lib/python3.5/site-packages/pixelweb/ui/css'...
Listing './lib/python3.5/site-packages/pixelweb/ui/img'...
Listing './lib/python3.5/site-packages/pixelweb/ui/js'...
Listing './lib/python3.5/site-packages/pixelweb/ui/semantic'...
Listing './lib/python3.5/site-packages/pixelweb/ui/semantic/themes'...
Listing './lib/python3.5/site-packages/pixelweb/ui/semantic/themes/default'...
Listing './lib/python3.5/site-packages/pixelweb/ui/semantic/themes/default/assets'...
Listing './lib/python3.5/site-packages/pixelweb/ui/semantic/themes/default/assets/fonts'...
Listing './lib/python3.5/site-packages/pixelweb/ui/semantic/themes/default/assets/images'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
